# sa2django

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
sa2django/: __init__.py  column_mappers.py  core.py
tests/: conftest.py  pytest.ini  sa_models.py  test_sa.py
tests/testsite/: manage.py
tests/testsite/testapp/: models.py
tests/testsite/testsite/: asgi.py  settings.py  urls.py  wsgi.py
