[tool.poetry]
name = "sa2django_model"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.7"
pytest = "^5.3"
pre-commit = "^1.21"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

