[tool.poetry]
name = "sa2django"
version = "0.1.0"
description = "Convert sqlalchemy database schemas to django database models at runtime."
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.19"
django = "^3.1.1"
sqlalchemy-citext = "^1.7.0"
psycopg2 = "^2.8.6"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pre-commit = "^1.21"
pytest-django = "^3.9.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=1.0,<2"]
build-backend = "poetry.masonry.api"
